fix css on IE

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -92,3 +92,17 @@ a.desc:after {
 .navbar-inverse{
     background: #08263a;
 }
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #BEB8B8;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #BEB8B8;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #BEB8B8;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #BEB8B8;
+}
