--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -212,6 +212,7 @@
     .container{
         width: 100%;
         margin: 50px auto;
+        padding-bottom: 30px;
         .topic{
             width: 100%;
             padding: 10px;
